chore: update demos navigation

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -6,202 +6,53 @@
                 <img class="logo" src="images/rsrcs/jsblocks-logo.svg" alt="Ignite UI for Angular Logo">
 
                 <!--Components-->
-                <span class="nav-item header">Components</span>
+                <span class="nav-item header" igxDrawerItem [isHeader]="true">Components</span>
 
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/avatar">
-                    <igx-icon fontSet="material" name="account_circle"></igx-icon>
-                    <span>Avatar</span>
+                <span *ngFor="let item of componentLinks" class="nav-item" igxDrawerItem routerLinkActive="igx-nav-drawer-item--active" routerLink="{{item.link}}">
+                    <igx-icon fontSet="material" name="{{item.icon}}"></igx-icon>
+                    <span>{{item.name}}</span>
                 </span>
 
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/badge">
-                    <igx-icon fontSet="material" name="error"></igx-icon>
-                    <span>Badge</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttonGroup">
-                    <igx-icon fontSet="material" name="group_work"></igx-icon>
-                    <span>Button Group</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/calendar">
-                    <igx-icon fontSet="material" name="event"></igx-icon>
-                    <span>Calendar</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/card">
-                    <igx-icon fontSet="material" name="home"></igx-icon>
-                    <span>Card</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/carousel">
-                    <igx-icon fontSet="material" name="view_carousel"></igx-icon>
-                    <span>Carousel</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/datePicker">
-                    <igx-icon fontSet="material" name="date_range"></igx-icon>
-                    <span>DatePicker</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/grid">
-                    <igx-icon fontSet="material" name="view_column"></igx-icon>
-                    <span>Grid</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/gridPerformance">
-                    <igx-icon fontSet="material" name="view_column"></igx-icon>
-                    <span>Grid Performance</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/dialog">
-                    <igx-icon fontSet="material" name="all_out"></igx-icon>
-                    <span>Dialog</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/inputs">
-                    <igx-icon fontSet="material" name="web"></igx-icon>
-                    <span>Forms</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/icon">
-                    <igx-icon fontSet="material" name="android"></igx-icon>
-                    <span>Icon</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/list">
-                    <igx-icon fontSet="material" name="list"></igx-icon>
-                    <span>List</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/listPerformance">
-                    <igx-icon fontSet="material" name="list"></igx-icon>
-                    <span>List Performance</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navbar">
-                    <igx-icon fontSet="material" name="arrow_back"></igx-icon>
-                    <span>Navbar</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navdrawer">
-                    <igx-icon fontSet="material" name="menu"></igx-icon>
-                    <span>Navdrawer</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/progressbar">
-                    <igx-icon fontSet="material" name="poll"></igx-icon>
-                    <span>Progress Indicators</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/slider">
-                    <igx-icon fontSet="material" name="linear_scale"></igx-icon>
-                    <span>Slider</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/scroll">
-                    <igx-icon fontSet="material" name="swap_vert"></igx-icon>
-                    <span>Scroll</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/snackbar">
-                    <igx-icon fontSet="material" name="feedback"></igx-icon>
-                    <span>Snackbar</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/tabbar">
-                    <igx-icon fontSet="material" name="tab"></igx-icon>
-                    <span>Tabbar</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/toast">
-                    <igx-icon fontSet="material" name="android"></igx-icon>
-                    <span>Toast</span>
-                </span>
 
                 <!--Directives-->
-                <span class="nav-item header">Directives</span>
+                <span class="nav-item header" igxDrawerItem >Directives</span>
 
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttons">
-                    <igx-icon fontSet="material" name="radio_button_unchecked"></igx-icon>
-                    <span>Buttons</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/layout">
-                    <igx-icon fontSet="material" name="view_quilt"></igx-icon>
-                    <span>Layout</span>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/ripple">
-                    <igx-icon fontSet="material" name="wifi_tethering"></igx-icon>
-                    <span>Ripple</span>
+                <span *ngFor="let item of directiveLinks" class="nav-item" igxDrawerItem [routerLinkActive]="'active'" routerLink="{{item.link}}">
+                    <igx-icon fontSet="material" name="{{item.icon}}"></igx-icon>
+                    <span>{{item.name}}</span>
                 </span>
 
                 <!--Style guide-->
                 <span class="nav-item header">Style</span>
 
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/colors">
-                    <igx-icon fontSet="material" name="color_lens"></igx-icon>
-                    <span>Colors</span>
+                <span *ngFor="let item of styleLinks" class="nav-item" igxDrawerItem [routerLinkActive]="'active'" routerLink="{{item.link}}">
+                    <igx-icon fontSet="material" name="{{item.icon}}"></igx-icon>
+                    <span>{{item.name}}</span>
                 </span>
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/typography">
-                    <igx-icon fontSet="material" name="font_download"></igx-icon>
-                    <span>Typography</span>
+
+            </nav>
+        </div>
+        <div class="igx-drawer-mini-content">
+            <nav class="nav">
+                <span class="nav-item header" igxDrawerItem>Components</span>
+
+                <span *ngFor="let item of componentLinks" class="nav-item" igxDrawerItem [routerLinkActive]="'active'" routerLink="{{item.link}}">
+                    <igx-icon fontSet="material" name="{{item.icon}}"></igx-icon>
                 </span>
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/shadows">
-                    <igx-icon fontSet="material" name="layers"></igx-icon>
-                    <span>Shadows</span>
+
+                <span class="nav-item header">Directives</span>
+
+                <span *ngFor="let item of directiveLinks" class="nav-item" igxDrawerItem [routerLinkActive]="'active'" routerLink="{{item.link}}">
+                    <igx-icon fontSet="material" name="{{item.icon}}"></igx-icon>
                 </span>
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/virtualForDirective">
-                    <igx-icon fontSet="material" name="view_column"></igx-icon>
-                    <span>Virtual-For Directive</span>
+
+                <span class="nav-item header">Style</span>
+
+                <span *ngFor="let item of styleLinks" class="nav-item" igxDrawerItem [routerLinkActive]="'active'" routerLink="{{item.link}}">
+                    <igx-icon fontSet="material" name="{{item.icon}}"></igx-icon>
                 </span>
             </nav>
         </div>
-        <!-- <div class="igx-drawer-mini-content">
-            <nav class="nav">
-                <span class="nav-item header">Components</span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/avatar">
-                    <igx-icon fontSet="material" name="account_circle"></igx-icon>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/badge">
-                    <igx-icon fontSet="material" name="error"></igx-icon>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttonGroup">
-                    <igx-icon fontSet="material" name="group_work"></igx-icon>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/calendar">
-                    <igx-icon fontSet="material" name="event"></igx-icon>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/card">
-                    <igx-icon fontSet="material" name="home"></igx-icon>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/carousel">
-                    <igx-icon fontSet="material" name="view_carousel"></igx-icon>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/datePicker">
-                    <igx-icon fontSet="material" name="date_range"></igx-icon>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/grid">
-                    <igx-icon fontSet="material" name="view_column"></igx-icon>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/gridPerformance">
-                    <igx-icon fontSet="material" name="view_column"></igx-icon>
-                </span>
-
-                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navdrawer">
-                    <igx-icon fontSet="material" name="menu"></igx-icon>
-                </span>
-            </nav>
-        </div> -->
     </igx-nav-drawer>
     <div class="content">
         <router-outlet></router-outlet>
