style(nav-drawer): initial styling for the drawer items

--- a/src/core/styles/components/navdrawer/_navdrawer-component.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-component.scss
@@ -61,4 +61,34 @@
         transition: none;
         visibility: hidden;
     }
+
+    // igxDrawerItem Items
+    @include e(item) {
+        display: flex;
+        flex: 1 0 100%;
+        flex-flow: row nowrap;
+        position: relative; //for ripple
+        color: rgba(#000000, .87);
+        max-height: 48px;
+        padding: 12px 16px;
+        cursor: pointer;
+        font-size: 14px;
+        align-items: center;
+        font-weight: 600;
+        user-select: none;
+        outline: transparent;
+        white-space: nowrap;
+
+        &:hover {
+            background-color: #f0f0f0;
+        }
+    }
+    @include e(item, active) {
+        color: rgba(#000000, 1); // should be app primary color 
+        background-color: #f0f0f0;
+    }
+
+    @include e(item, header) {
+        color: rgba(#000000, .54);
+    }
 }
