fix(demos): avatar missing icon

--- a/demos/app/badge/sample.component.html
+++ b/demos/app/badge/sample.component.html
@@ -5,23 +5,25 @@
 
         <!--Avatars w/ badges-->
         <section class="sample-column">
-            <h4 class="sample-title">In conjunction with the <i class="light">Badge Component</i></h4>
+            <h4 class="sample-title">In conjunction with the
+                <i class="light">Badge Component</i>
+            </h4>
             <article class="avatars-wrapper">
 
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" color="#484848" roundShape="true">
+                    <igx-avatar color="gray" icon="face" color="#484848" roundShape="true">
                         <igx-badge type="success" position="top-left" icon="check"></igx-badge>
                     </igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" color="#484848" size="medium">
+                    <igx-avatar color="gray" icon="face" color="#484848" size="medium">
                         <igx-badge type="info" position="top-right" value="8"></igx-badge>
                     </igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" color="#484848" size="large" roundShape="true">
+                    <igx-avatar color="gray" icon="face" color="#484848" size="large" roundShape="true">
                         <igx-badge type="error" position="bottom-left" icon="close"></igx-badge>
                     </igx-avatar>
                 </div>
