--- a/demos/app/avatar/sample.component.html
+++ b/demos/app/avatar/sample.component.html
@@ -8,15 +8,15 @@
             <h4 class="sample-title">Circular Avatars</h4>
             <article class="avatars-wrapper">
                 <div class="avatar-sample">
-                    <igx-avatar [roundShape]="'true'" color="#424242"></igx-avatar>
+                    <igx-avatar [roundShape]="'true'" icon="tag_faces" color="#424242"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar [roundShape]="'true'" color="#424242" size="medium"></igx-avatar>
+                    <igx-avatar [roundShape]="'true'" icon="tag_faces" color="#424242" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar [roundShape]="'true'" color="#424242" size="large"></igx-avatar>
+                    <igx-avatar [roundShape]="'true'" icon="tag_faces" color="#424242" size="large"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
@@ -50,15 +50,15 @@
             <h4 class="sample-title">Square Icons</h4>
             <article class="avatars-wrapper">
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" color="#424242"></igx-avatar>
+                    <igx-avatar color="gray" icon="tag_faces" color="#424242"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" color="#424242" size="medium"></igx-avatar>
+                    <igx-avatar color="gray" color="#424242" icon="tag_faces" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar color="gray" color="#424242" size="large"></igx-avatar>
+                    <igx-avatar color="gray" color="#424242" icon="tag_faces" size="large"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
