--- a/src/core/styles/components/grid-filtering/_grid-filtering-theme.scss
+++ b/src/core/styles/components/grid-filtering/_grid-filtering-theme.scss
@@ -69,7 +69,7 @@ $components: register-component($components, #{$component-name});
     $grid-head-icon-padding: rem(4.5px) !default;
 
     $filtering-menu-min-width: 240px;
-    $filtering-menu-shadow: $elevate-4;
+    $filtering-menu-shadow: $elevate-8;
     $filtering-menu-radius: 4px;
     $filtering-menu-distance-to-toggle: 4px;
 
@@ -144,13 +144,18 @@ $components: register-component($components, #{$component-name});
 
         @include igx-button(igx-button-theme(
             $flat-text-color: map-get($this, 'menu-button-text-color'),
-            $flat-hover-background: map-get($this, 'menu-button-color'),
+            $flat-hover-text-color: map-get($this, 'menu-button-text-color'),
+            $flat-hover-background: rgba(map-get($this, 'menu-button-text-color'), .12),
+            $flat-focus-text-color: map-get($this, 'menu-button-text-color'),
+            $flat-focus-background: rgba(map-get($this, 'menu-button-text-color'), .08),
             $disabled-color: map-get($this, 'menu-button-disabled-text-color')
         ));
 
         @include igx-input(igx-input-theme(
             $idle-accent-color: rgba(text-contrast(map-get($this, 'menu-background')), .7),
             $idle-text-color: text-contrast(map-get($this, 'menu-background')),
+            $filled-text-color: rgba(text-contrast(map-get($this, 'menu-background')), .7),
+            $placeholder-text-color: rgba(text-contrast(map-get($this, 'menu-background')), .5),
             $focused-text-color: text-contrast(map-get($this, 'menu-background')),
             $focused-accent-color: map-get($this, 'toggle-active-background')
         ));
