refactor(nav-drawer): make drawer content templates, add directives to mark

--- a/src/navigation-drawer/navigation-drawer.component.html
+++ b/src/navigation-drawer/navigation-drawer.component.html
@@ -1,3 +1,12 @@
+<ng-template #defaultItemsTemplate>
+    <div igxDrawerItem [isHeader]="true">Navigation Drawer</div>
+    <div igxDrawerItem igxRipple> Star by adding</div>
+    <div igxDrawerItem igxRipple> <code>&lt;ng-template igxDrawer>&gt;</code> </div>
+    <div igxDrawerItem igxRipple> And some items inside </div>
+    <div igxDrawerItem igxRipple> Style with igxDrawerItem </div>
+    <div igxDrawerItem igxRipple> and igxRipple directives</div>
+</ng-template>
+
 <div [hidden]="pin"
     class="igx-nav-drawer__overlay"
     [class.igx-nav-drawer__overlay--hidden]="!isOpen"
@@ -5,16 +14,11 @@
 </div>
 <aside role="navigation"
     class="igx-nav-drawer__aside"
-    [class.igx-nav-drawer__aside--collapsed]="!_hasMimiTempl && !isOpen"
-    [class.igx-nav-drawer__aside--mini]="_hasMimiTempl && !isOpen"
+    [class.igx-nav-drawer__aside--collapsed]="!miniTemplate && !isOpen"
+    [class.igx-nav-drawer__aside--mini]="miniTemplate && !isOpen"
     [class.igx-nav-drawer__aside--pinned]="pin"
     [class.igx-nav-drawer__aside--right]="position == 'right'">
 
-    <div class="" [hidden]="!isOpen && _hasMimiTempl">
-        <ng-content select=".igx-drawer-content"></ng-content>
-    </div>                
-    <div class="" [hidden]="isOpen">
-        <ng-content select=".igx-drawer-mini-content"></ng-content>
-    </div>
+    <ng-container *ngTemplateOutlet="template || defaultItemsTemplate"></ng-container>
 </aside>
 <div class="igx-nav-drawer__style-dummy"></div>
