#528 igxList tests refactoring. (#582)
* Updated list tests after refactoring.

* #528 Adding 2 new igxList tests and a few more check in the existing ones.

--- a/src/list/list.component.html
+++ b/src/list/list.component.html
@@ -1,12 +1,10 @@
 <ng-content></ng-content>
 
 <ng-template #defaultEmptyList>
-    <article class="message">
-        <p>There are no items in the list.</p>
-    </article>
+	<p>No items placeholder.</p>
 </ng-template>
 
 <ng-container *ngIf="children && children.length === 0">
-    <ng-container *ngTemplateOutlet="template; context: context">
-    </ng-container>
+	<ng-container *ngTemplateOutlet="template; context: context">
+	</ng-container>
 </ng-container>
