--- a/src/list/list.component.html
+++ b/src/list/list.component.html
@@ -1,10 +1,12 @@
 <ng-content></ng-content>
 
 <ng-template #defaultEmptyList>
-	<p>No items placeholder.</p>
+	<article class="message">
+		<p>There are no items in the list.</p>
+	</article>
 </ng-template>
 
-<ng-container *ngIf="children && children.length === 0">
+<ng-container *ngIf="!children || children.length === 0">
 	<ng-container *ngTemplateOutlet="template; context: context">
 	</ng-container>
 </ng-container>
