refactor(demos): load theme from scss in demos
Load the igniteui-angular theme from scss file and let npm start serve
demo app on localhost

--- a/demos/app/input/sample.component.html
+++ b/demos/app/input/sample.component.html
@@ -10,7 +10,7 @@
                     <label igxLabel for="firstName">First Name*</label>
                 </div>
                 <div class="igx-form-group">
-                    <input igxInput name="lastName" type="text" [(ngModel)]="user.lastName" required/>
+                    <input igxInput name="lastName" type="text" [(ngModel)]="user.lastName" />
                     <label igxLabel for="lastName">Last Name*</label>
                 </div>
                 <div class="igx-form-group">
