--- a/demos/app/app.component.css
+++ b/demos/app/app.component.css
@@ -17,19 +17,19 @@
     bottom: 0;
     left: 0;
     overflow: hidden;
+    width: 100%;
+}
+
+.main > * {
+    width: 100%;
 }
 
 .content {
     position: relative;
-    width: 100%;
     overflow-y: scroll;
 }
 
 .logo {
     margin-top: 16px;
     width: 238px;
-}
-
-[igxdraweritem] > * + * {
-    margin-left: 32px;
 }
