--- a/src/core/styles/components/navdrawer/_navdrawer-component.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-component.scss
@@ -1,4 +1,7 @@
 @include b(igx-nav-drawer) {
+
+    flex-basis: 242px;
+
     // Main aside element
     @include e(aside) {
         @extend %adide !optional;
@@ -64,31 +67,16 @@
 
     // igxDrawerItem Items
     @include e(item) {
-        display: flex;
-        flex: 1 0 100%;
-        flex-flow: row nowrap;
-        position: relative; //for ripple
-        color: rgba(#000000, .87);
-        max-height: 48px;
-        padding: 12px 16px;
-        cursor: pointer;
-        font-size: 14px;
-        align-items: center;
-        font-weight: 600;
-        user-select: none;
-        outline: transparent;
-        white-space: nowrap;
-
-        &:hover {
-            background-color: #f0f0f0;
-        }
+        @extend %item !optional;
     }
+
     @include e(item, active) {
-        color: rgba(#000000, 1); // should be app primary color 
-        background-color: #f0f0f0;
+        @extend %item !optional;
+
+        @extend %item--active !optional;
     }
 
     @include e(item, header) {
-        color: rgba(#000000, .54);
+        @extend %item--header !optional;
     }
 }
