--- a/src/navigation-drawer/navigation-drawer.component.html
+++ b/src/navigation-drawer/navigation-drawer.component.html
@@ -1,10 +1,10 @@
 <ng-template #defaultItemsTemplate>
     <div igxDrawerItem [isHeader]="true">Navigation Drawer</div>
-    <div igxDrawerItem igxRipple> Star by adding</div>
-    <div igxDrawerItem igxRipple> <code>&lt;ng-template igxDrawer>&gt;</code> </div>
-    <div igxDrawerItem igxRipple> And some items inside </div>
-    <div igxDrawerItem igxRipple> Style with igxDrawerItem </div>
-    <div igxDrawerItem igxRipple> and igxRipple directives</div>
+    <div igxDrawerItem> Star by adding</div>
+    <div igxDrawerItem> <code>&lt;ng-template igxDrawer>&gt;</code> </div>
+    <div igxDrawerItem> And some items inside </div>
+    <div igxDrawerItem> Style with igxDrawerItem </div>
+    <div igxDrawerItem> and igxRipple directives</div>
 </ng-template>
 
 <div [hidden]="pin"
