--- a/src/tabbar/tab.component.html
+++ b/src/tabbar/tab.component.html
@@ -1,15 +1,9 @@
 <ng-template #defaultTabTemplate>
-    <div *ngIf="relatedPanel.icon" ngClass="tab-icon">
+    <div *ngIf="relatedPanel.icon" class="tab-icon">
         <igx-icon fontSet="material" [name]="relatedPanel.icon"></igx-icon>
-        <igx-badge [value]="changesCount" [hidden]="changesCount == 0"></igx-badge>
+        <igx-badge [value]="changesCount" [hidden]="changesCount === 0"></igx-badge>
     </div>
     <div *ngIf="relatedPanel.label" ngClass="tab-label">{{relatedPanel.label}}</div>
 </ng-template>
 <ng-container *ngTemplateOutlet="relatedPanel.customTabTemplate ? relatedPanel.customTabTemplate : defaultTabTemplate; context: { $implicit: relatedPanel }">
 </ng-container>
-
-
-
-
-
-
